Finish interceptor of instance method